# Ceterni-Bot

./: .gitignore  README.md  main.py  pyproject.toml  test.py
database/: db.py  questions.json
utils/: chat_gpt.py  evaluation.py  manage_pics.py  utils.py
